# moxide

./: Cargo.toml  README.md  develop.nix  flake.nix
.github/workflows/: rust.yml
nix/: build.nix  hm-module.nix
src/: cli.rs  directories.rs  helpers.rs  init.rs  macros.rs  main.rs  projects.rs  templates.rs  tmux.rs
src/cli/: directory.rs  init.rs  list.rs  mod.rs  project.rs  template.rs
src/commands/: directory.rs  freeze.rs  init.rs  list.rs  mod.rs  project.rs  template.rs
src/widgets/: heading.rs  mod.rs  table.rs
