[package]
name = "moxide"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0-only"
readme = "README.md"
authors = ["Dlurak"]
description = "Moxide is a powerful tmux session manager."
homepage = "https://github.com/Dlurak/moxide"
repository = "https://github.com/Dlurak/moxide"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.16", features = ["derive"] }
dirs = "5.0.1"
colored = "2.1.0"
tmux_interface = "0.3.2"
itertools = "0.14.0"
thiserror = "2.0.12"
